--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -48,13 +48,13 @@ jobs:
         id: msg
         run: |
           export cargo_update_log="$(cat cargo_update.log)"
-          echo "commit_message=${{ TITLE }}\n\n$cargo_update_log" >> $GITHUB_OUTPUT
-          echo "body=${{ BODY }}" | envsubst >> $GITHUB_OUTPUT
+          echo "commit_message=$TITLE\n\n$cargo_update_log" >> $GITHUB_OUTPUT
+          echo "body=$BODY" | envsubst >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: ${{ steps.msg.outputs.commit_message }}
-          title: ${{ TITLE }}
+          title: ${{ env.TITLE }}
           body: ${{ steps.msg.outputs.body }}
-          branch: ${{ BRANCH }}
+          branch: ${{ env.BRANCH }}
