--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -48,8 +48,14 @@ jobs:
         id: msg
         run: |
           export cargo_update_log="$(cat cargo_update.log)"
-          echo "commit_message='$TITLE\n\n$cargo_update_log'" >> $GITHUB_OUTPUT
-          echo "body='$BODY'" | envsubst >> $GITHUB_OUTPUT
+
+          echo "commit_message<<EOF" >> $GITHUB_OUTPUT
+          echo "$cargo_update_log" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          echo "body<<EOF" >> $GITHUB_OUTPUT
+          echo "$BODY" | envsubst >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
