--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -14,6 +14,8 @@ permissions:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  CARGO_COLOR: never
+  BRANCH: cargo-update
   TITLE: "chore(deps): weekly `cargo update`"
   BODY: |
     Automation to keep dependencies in `Cargo.lock` current.
@@ -28,7 +30,6 @@ env:
 
     </p>
     </details>
-  BRANCH: cargo-update
 
 jobs:
   update:
@@ -50,7 +51,7 @@ jobs:
           export cargo_update_log="$(cat cargo_update.log)"
 
           echo "commit_message<<EOF" >> $GITHUB_OUTPUT
-          echo "$cargo_update_log" >> $GITHUB_OUTPUT
+          printf "$TITLE\n\n$cargo_update_log\n" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
           echo "body<<EOF" >> $GITHUB_OUTPUT
