--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -14,7 +14,6 @@ permissions:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  CARGO_COLOR: never
   BRANCH: cargo-update
   TITLE: "chore(deps): weekly `cargo update`"
   BODY: |
@@ -43,7 +42,7 @@ jobs:
 
       - name: cargo update
         # Remove first line that always just says "Updating crates.io index"
-        run: cargo update 2>&1 | sed '/crates.io index/d' | tee -a cargo_update.log
+        run: cargo update --color never 2>&1 | sed '/crates.io index/d' | tee -a cargo_update.log
 
       - name: craft commit message and PR body
         id: msg
@@ -57,11 +56,11 @@ jobs:
           echo "body<<EOF" >> $GITHUB_OUTPUT
           echo "$BODY" | envsubst >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
-          echo "$GITHUB_OUTPUT"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
+          add-paths: ./Cargo.lock
           commit-message: ${{ steps.msg.outputs.commit_message }}
           title: ${{ env.TITLE }}
           body: ${{ steps.msg.outputs.body }}
